Fixed overflow & footer icon position

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 
 html {
     font-size: 62.5%; /* 10px -> 1rem */
-    overflow-x: hidden;
 }
 
 :root {
